# Neuro-K-Sync

./: .gitignore  DF_formatter.py  README.md  file_manager.py  formatter.py  local_sync.prof  local_sync.py  pyproject.toml  rule_manager.py  song_metadata.py  song_utils.py
DF_Customizer/: file_manager.py  rule_manager.py
src/local_sync/: DF_formatter.py  __main__.py  local_sync.py
src/local_sync/DF_Customizer/: file_manager.py  rule_manager.py
src/metadata_utils/: engraver.py
tests/: test_local_sync.py
